NJU-ProjectN/nvboard master initialized without tracing
NJU-ProjectN/nvboard a48416ef8179faa6e40df1355cd9c613af8382f6 fix compile error with clang in MacOS

--- a/npc/Makefile
+++ b/npc/Makefile
@@ -1,8 +1,27 @@
 all:
 	@echo "Write this Makefile by your self."
 
+ifeq ($(VERILATOR_ROOT),)
+VERILATOR = verilator
+else
+export VERILATOR_ROOT
+VERILATOR = $(VERILATOR_ROOT)/bin/verilator
+endif
+
 sim:
 	$(call git_commit, "sim RTL") # DO NOT REMOVE THIS LINE!!!
-	@echo "Write this Makefile by your self."
+	VSRC = $(NPC_HOME)/vsrc
+	CSRC = $(NPC_HOME)/csrc
+	VERILOG_FILE = $(VSRC)/top.v
+	CPP_FILE = $(CSRC)/main.cpp
+	@echo "-- VERILATE & BUILD --------"
+	$(VERILATOR) -cc --exe --build -j $(VERILOG_FILE) $(CPP_FILE)
+	@echo "-- RUN ---------------------"
+	obj_dir/Vtop
+	@echo "-- DONE --------------------"
+	
+	maintainer-copy::
+	clean mostlyclean distclean maintainer-clean::
+	-rm -rf obj_dir *.log *.dmp *.vpd core
 
 include ../Makefile
